ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: model-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ml-model
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: model-service
            port:
              number: 80
